# DirectXTest

./: .gitignore  Build.bat  CMakeLists.txt  CMakeUserPresets.json  GenProject.bat  conanfile.py
assets/: imgui.ini
assets/built_in/materials/: blit.mtl  error.mtl  skybox.mtl  skybox_batch.mtl
assets/built_in/shaders/: skybox.shader  skybox_batch.shader
assets/built_in/shaders/lib/: common.hlsl  lighting.hlsl  math.hlsl
assets/cache/meshes/: quad.obj.cache  quad.obj.cacheMeta
assets/materials/: deferred_lit.mtl  pbr_basic.mtl  test.mtl  test_batch.mtl  test_mat.json
assets/scenes/Scene_A/: scene.json
assets/scenes/Scene_A/materials/: BGR_Water_d88d1e5e43d525c9.mtl  BLD_BrickHouse1_0199b9b0998a9932.mtl  BLD_Bridge1_d78277fb2a0bbc1b.mtl  BLD_Cabins_Mossy_01c09dc950d2c876.mtl  BLD_Church1_a20326a7c2cdd122.mtl  BLD_Doors1_a30c868d5901dcdd.mtl  BLD_IndBuilding1_b8024a5a2b7c6462.mtl  BLD_Structures1_b8958e533b9306bc.mtl  BLD_Structures2_edd08ad83221d235.mtl  BLD_Villa1_0c77942e3e66d987.mtl  BLD_Villa2_5255a62ac3e90fed.mtl  BLD_WindowGlass1_e0d3dff9784f86bb.mtl  Default-Material_28e620823e0f65b6.mtl  HLP_BlockerCube_03473481f195a5e1.mtl  NAT_Bush1_f01c553778276e47.mtl  NAT_CobbleRocks1_6a5f706b47135095.mtl  NAT_Grass_5f7ca07661cfd2e2.mtl  NAT_Rocks1_ac41c8cea5759b1d.mtl  Optimized Bark Material_0170d2518f764007.mtl  Optimized Bark Material_378dc8b7970a8b5c.mtl  Optimized Bark Material_59e099613c9e5e1c.mtl  Optimized Bark Material_8e91fab117a8f2c7.mtl  Optimized Bark Material_a26dfe692bc22f24.mtl  PROP_Beds1_0c5ac6cef98c6f39.mtl  PROP_Boat1_38bfae683f8138ff.mtl  PROP_Cabinets1_9b35f3637d040a90.mtl  PROP_Car1_726d98a5a51607bd.mtl  PROP_FlyingSaucer_c942fe5bef6c692c.mtl  PROP_Gravestones1_930002f91ca0b33e.mtl  PROP_ParkBench1_ea14f3cf938734e2.mtl  PROP_RugsPaintings_93ec9051742b005b.mtl  PROP_Ship1_2f30e8ada3471867.mtl  PROP_SmallProps1_b83a570ee23e3c72.mtl  PROP_SmallProps2_630b5bcb96777b3c.mtl
assets/scenes/test_scene/: test_scene.json
assets/shaders/: blit.shader  deferred_lit.shader  draw_shadow.shader  draw_shadow_batch.shader  pbr_basic.shader  pbr_basic_batch.shader
assets/shaders/lib/: common.hlsl  lighting.hlsl
profiles/: clang
src/: main.cpp  window.cpp  window.h
src/common/: asset_cache.cpp  asset_cache.h  const.h  data_set.cpp  data_set.h  dx_texture.cpp  dx_texture.h  event.h  i_resource.h  i_texture.h  image.cpp  image.h  keyboard.cpp  keyboard.h  material.cpp  material.h  math.cpp  math.h  mesh.cpp  mesh.h  render_texture.cpp  render_texture.h  shader.cpp  shader.h  shader_variants.cpp  shader_variants.h  string_handle.cpp  string_handle.h  utils.cpp  utils.h  variant_keyword.cpp  variant_keyword.h
src/game/: game.cpp  game.h  game_resource.cpp  game_resource.h  gui.cpp  gui.h
src/gui/: gui.cpp  gui.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
src/objects/: camera_comp.cpp  camera_comp.h  comp.cpp  comp.h  light_comp.cpp  light_comp.h  object.cpp  object.h  render_comp.cpp  render_comp.h  scene.cpp  scene.h  scene_registry.cpp  scene_registry.h  skybox_comp.cpp  skybox_comp.h  test_comp.cpp  test_comp.h  transform_comp.cpp  transform_comp.h
src/render/: cbuffer.cpp  cbuffer.h  culling_system.cpp  culling_system.h  desc_handle_pool.cpp  desc_handle_pool.h  descriptor_pool.cpp  descriptor_pool.h  directx.cpp  directx.h  dx_buffer.cpp  dx_buffer.h  dx_helper.cpp  dx_helper.h  dx_resource.cpp  dx_resource.h  global_material_params.cpp  global_material_params.h  indirect_lighting.cpp  indirect_lighting.h  param_types.h  pso.cpp  pso.h  render_context.cpp  render_context.h  render_pipeline.cpp  render_pipeline.h  render_resources.cpp  render_resources.h  render_state.cpp  render_state.h  render_target.cpp  render_target.h  render_thread.cpp  render_thread.h  render_tree.cpp  render_tree.h  texture_format.h
src/render/batch_rendering/: batch_matrix_buffer.cpp  batch_matrix_buffer.h  batch_mesh.cpp  batch_mesh.h  batch_renderer.cpp  batch_renderer.h
src/render/render_pass/: deferred_lit_pass.cpp  deferred_lit_pass.h  final_pass.cpp  final_pass.h  i_render_pass.h  main_light_shadow_pass.cpp  main_light_shadow_pass.h  prepare_pass.cpp  prepare_pass.h  render_scene_pass.cpp  render_scene_pass.h
src/utils/: consumer_thread.h  data_table.cpp  data_table.h  fast_memory_allocator.cpp  fast_memory_allocator.h  job_scheduler.cpp  job_scheduler.h  recycle_bin.h  simple_list.h  single_elem_pool.h  storage.h  thread_pool.cpp  thread_pool.h  time_out_buffer.h
tools/: build.bat  build_tool.py  gen_project.bat
